deployment/Kubernetes/overlays/ou/production/enroll/enroll-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: enroll-ingress
spec:
  tls:
    - hosts:
        - enroll.rap.cs.ou.nl
      secretName: enroll-tls-production-secret
  rules:
    - host: enroll.rap.cs.ou.nl
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: enroll
                port:
                  number: 80
